welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: '=' expected but ';' found.
def diff21(n:Int): Int = {
^